# parseadorwebAsembler

./: .gitignore  ARQUITECTURA_BIOS.md  BIENVENIDA.md  BIOS_SOPORTE.md  Cargo.toml  DESARROLLO.md  DIAGRAMAS.md  EMULADOR_ZIP_SOPORTE.md  IMPLEMENTACION_BIOS_RESUMEN.md  INDICE_DOCUMENTACION.md  INICIO_RAPIDO.md  INTEGRACION_WASM.md  INVENTARIO.md  MANIFEST_ENTREGA.md  MAPA_MEMORIA_IMPLEMENTACION.md  QUICKSTART.md  README.md  README_FINAL.md  README_NEW.md  RESUMEN_IMPLEMENTACION.md  SOPORTE_ZIP_IMPLEMENTACION.md  START_HERE.md  TECNICO.md  USAR_INTERFACE.md  VDP_INICIALIZACION.md  VERIFICACION_FINAL.md  demo.html  index.html  parse  server.py  test_bios.html
.cargo/: config.toml
.github/workflows/: deploy.yml  jekyll-gh-pages.yml
examples/: usage.rs
pkg/: .gitignore  package.json
rooms/: Hole in One Special (Japan).rom
src/: lib.rs
tests/: integration_tests.rs
