[package]
name = "msx2-processor"
version = "1.0.0"
edition = "2021"
authors = ["Papiweb Desarrollos Informaticos"]
description = "Advanced MSX2 sprite processor with post-processing effects: Bilinear interpolation, normal maps, and Sobel edge detection"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"

# Opcionales para mejor rendimiento
[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0
